ndb - 51-ndb -> 6.2 post merge bug#31482   also fix NdbRecord code path